--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -87,9 +87,9 @@ th,td{
 
         <div class="row mt-5">  
         
-          <div class="row justify-content-end" *ngIf="role == 'Super admin'">
-            <div class="col-2">
-              <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#mahisiva">Add Admin</button>
+          <div  *ngIf="role == 'Superadmin'">
+            <div class=" d-grid gap-2 d-md-flex justify-content-md-end">
+              <button type="button" class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#mahisiva" style="background:#A51C05;color: white;">Add Admin</button>
             </div>
           </div>
           
