--- a/src/app/template-list/template-list.component.html
+++ b/src/app/template-list/template-list.component.html
@@ -40,7 +40,7 @@
     <div class="toast-body">
 
     </div>
-</div>
+   </div>
 
 <div class="toast collapse opacity1" id="collapseExample1">
     <div class="toast-body">
@@ -56,210 +56,186 @@
 
 <div class="pageContent " style="margin-top: 50px;">
     <main id="main" class="main">
-        <div id="sideBarContent" class="container-fluid pe-5 ps-6">
+      <div id="sideBarContent" class="container-fluid pe-5 ps-6">
+  
+        <section class="section dashboard borrowers">
+  
+  
+       
+         
+            <div class="container " >
 
-            <section class="section dashboard borrowers">
+<div class="row hik">
 
+    
 
+   
 
-
-                <div class="container ">
-
-                    <div class="row hik">
-
-
-
-
-
-                        <div class="  mt-5">
-
-
-
-                            <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-
-                                <div class="container-fluid">
-                                    <div class="header-body">
-
-                                        <!-- Card stats -->
-
-                                        <div class="pt-5">
-
-                                            <div class="row mt-5">
-                                                <section class="main-p-area pb-50" id="reload"
-                                                    style="margin-top: 50px;">
-                                                    <div id="sideBarContent" class="container-fluid pe-5 ps-6">
-                                                        <div class="">
-                                                            <div class="finnup__profileheader">
-                                                                <div class="finnup__profiletitle">
-                                                                    <h2 class="text-danger her">Manage Template</h2>
-                                                                </div>
-
-                                                            </div>
-                                                            <div class="row mt-25">
-                                                                <div class="col-lg-10">
-                                                                    <div class="finnup__profiletable">
-                                                                        <table class="table table-striped">
-                                                                            <thead class="thead-dark text-white">
-                                                                                <tr>
-                                                                                    <th scope="col">#</th>
-                                                                                    <th scope="col">InterNational
-                                                                                        Cuisines</th>
-                                                                                    <th scope="col">National Cuisines
-                                                                                    </th>
-                                                                                    <th scope="col">Food Preference</th>
-                                                                                    <!-- <th scope="col">Chart</th> -->
-                                                                                    <th scope="col">Actions</th>
-                                                                                    <th>Status</th>
-
-
-                                                                                    <!-- <th scope="col">Actions</th> -->
-                                                                                </tr>
-                                                                            </thead>
-                                                                            <tbody>
-
-
-                                                                                <tr
-                                                                                    *ngFor="let chartDetails of all_userdetails">
-                                                                                    <th scope="row">{{chartDetails.id}}
-                                                                                    </th>
-                                                                                    <td>{{chartDetails.internationalCuisine}}
-                                                                                    </td>
-                                                                                    <td>{{chartDetails.nationalCuisine}}
-                                                                                    </td>
-                                                                                    <td>{{chartDetails.foodPreference}}
-                                                                                    </td>
-                                                                                    <!-- <td>{{chartDetails.chart["monday"]}}</td> -->
-
-
-                                                                                    <td>
-                                                                                        <div class="">
-
-                                                                                            <button
-                                                                                                class="btn btn-success text-white btn-sm mx-1"
-                                                                                                (click)="edit(chartDetails.id)">Edit</button>
-
-
-                                                                                        </div>
-                                                                                    </td>
-
-
-                                                                                    <td
-                                                                                        *ngIf="chartDetails.status == 0">
-
-                                                                                        <button
-                                                                                            class="btn btn-primary  text-white btn-sm"
-                                                                                            data-bs-toggle="modal"
-                                                                                            data-bs-target="#exampleModalCenter"
-                                                                                            (click)="OnEnter(chartDetails.id)"
-                                                                                            style="padding-left: 10px;padding-right: 12px;">Active</button>
-
-                                                                                    </td>
-
-                                                                                    <td
-                                                                                        *ngIf="chartDetails.status == 1">
-
-                                                                                        <button
-                                                                                            class="btn btn-danger text-white btn-sm"
-                                                                                            data-bs-toggle="modal"
-                                                                                            data-bs-target="#exampleModalCenter1"
-                                                                                            (click)="OnEnter(chartDetails.id)">Inactive</button>
-
-                                                                                    </td>
+    <div class="  mt-5">
 
 
 
-                                                                                </tr>
+        <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+
+            <div class="container-fluid">
+                <div class="header-body">
+
+                    <!-- Card stats -->
+
+                    <div class="pt-5">
+
+                        <div class="row mt-5">
+                            <section class="main-p-area pb-50" id="reload" style="margin-top: 50px;">
+                                <div id="sideBarContent" class="container-fluid pe-5 ps-6">
+                                    <div class="">
+                                        <div class="finnup__profileheader">
+                                            <div class="finnup__profiletitle">
+                                                <h2 class="text-danger her">Manage Template</h2>
+                                            </div>
+
+                                        </div>
+                                        <div class="row mt-25">
+                                            <div class="col-lg-10">
+                                                <div class="finnup__profiletable">
+                                                    <table class="table table-striped">
+                                                        <thead class="thead-dark text-white">
+                                                            <tr>
+                                                                <th scope="col">#</th>
+                                                                <th scope="col">InterNational Cuisines</th>
+                                                                <th scope="col">National Cuisines</th>
+                                                                <th scope="col">Food Preference</th>
+                                                                <!-- <th scope="col">Chart</th> -->
+                                                                <th scope="col">Actions</th>
+                                                                <th>Status</th>
 
 
-                                                                            </tbody>
-                                                                        </table>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </section>
+                                                                <!-- <th scope="col">Actions</th> -->
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                    
+
+                                                            <tr *ngFor="let chartDetails of all_userdetails">
+                                                                <th scope="row">{{chartDetails.id}}</th>
+                                                                <td>{{chartDetails.internationalCuisine}}</td>
+                                                                <td>{{chartDetails.nationalCuisine}}</td>
+                                                                <td>{{chartDetails.foodPreference}}</td>
+                                                                <!-- <td>{{chartDetails.chart["monday"]}}</td> -->
+                                                                
+                                                                
+                                                                <td>
+                                                                  <div class="">
+                                                                   
+                                                                    <button 
+                                                                        class="btn btn-success text-white btn-sm mx-1" (click)= "edit(chartDetails.id)">Edit</button>
+                                                               
+
+                                                                  </div>
+                                                                </td>
+                                                                
+
+                                                                <td *ngIf="chartDetails.status == 0">
+                                                           
+                                                                    <button  class="btn btn-primary  text-white btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" (click)="OnEnter(chartDetails.id)" style="padding-left: 10px;padding-right: 12px;">Active</button>
+                                                                
+                                                                </td>
+
+                                                              <td *ngIf="chartDetails.status == 1">
+                                                                 
+                                                                    <button class="btn btn-danger text-white btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModalCenter1" (click)="OnEnter(chartDetails.id)">Inactive</button>
+                                                                
+                                                                </td>
 
 
 
+                                                              </tr>
 
 
+                                                        </tbody>
+                                                    </table>
+                                                </div>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
-                            </div>
-                            <div class="container-fluid mt--7">
+                            </section>
 
-                                <div class="row mt-5">
 
-                                </div>
-                            </div>
+
 
 
                         </div>
                     </div>
-
-
-                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
-                                    <!-- <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button> -->
-                                </div>
-                                <div class="modal-body text-center">
-                                    Are you sure you want to Inactive this template
-                                </div>
-                                <div class="modal-footer" let chartDetails of all_userdetails>
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
-                                        (click)="inactive()">Inactive</button>
-
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                </div>
-
-
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog"
-                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                </div>
-                                <div class="modal-body text-center">
-                                    Are you sure you want to active this template
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                                        (click)="active()">Active</button>
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
 
                 </div>
-
-
-
-
-
-            </section>
+            </div>
         </div>
-    </main>
+        <div class="container-fluid mt--7">
+
+            <div class="row mt-5">
+
+            </div>
+        </div>
+
+
+    </div>
 </div>
+
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+          <!-- <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button> -->
+        </div>
+        <div class="modal-body text-center">
+          Are you sure you want to Inactive this template
+        </div>
+        <div class="modal-footer" let chartDetails of all_userdetails>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal"  (click) ="inactive()" >Inactive</button>
+
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+    
+          
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">        
+        </div>
+        <div class="modal-body text-center">
+          Are you sure you want to active this template
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click) ="active()" >Active</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+</div>
+
+
+
+
+
+</section>
+</div>
+</main>
+</div>
+
+
