--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -67,8 +67,8 @@
 <div class="sidebarContainer">
 <app-leftnav></app-leftnav>
 </div>
-
-
+ 
+ 
 <div class="pageContent " style="margin-top: 50px;">
   <main id="main" class="main">
     <div id="sideBarContent" class="container-fluid pe-5 ps-6">
@@ -120,10 +120,46 @@
                                             <div class="col mx-3">
                                               <h4 class="card-title text-uppercase text-muted mb-3">New Videos</h4>
                                             </div>
+  
+                                            <!-- <span class="form-check form-check-inline " *ngIf="role == 'Superadmin'" style="margin-left:27px">
+                                              <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
+                                              <label class="form-check-label" for="selectAllCheckbox">Select All</label>
+                                            </span> -->
+
+
+                                            <!-- <div class="row">
+                                              <div class="col-2" style="margin-left: 12px;">
+                                                Select Videos
+                                              </div>
+
+                                              <div class="col-2">
+                                                <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 27px">
+                                                  <input class="form-check-input" type="checkbox" id="selectFiveCheckbox" [(ngModel)]="selectFiveChecked" (change)="selectFiveVideos()">
+                                                  <label class="form-check-label" for="selectFiveCheckbox">Select 5</label>
+                                                </span>
+                                              </div>
+
+                                             
+
+
+                                              <div class="col-2">
+
+                                                <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 27px">
+                                                  <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
+                                                  <label class="form-check-label" for="selectAllCheckbox">Select All</label>
+                                                </span>
+                                              </div>
+                                              
+                                            </div> -->
+                                            
+                                            
+                                            <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 27px">
+                                              <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
+                                              <label class="form-check-label" for="selectAllCheckbox">Select All</label>
+                                            </span>
+                                            
                                             <div class="col float-end text-primary">
-                                              <button class="card-title mb-3 float-end text-primary" (click)="toggleShowMorenew()">
-                                                {{ showMoreVideosnew ? 'Less' : 'More' }}
-                                              </button>
+                                              
 
                                               <button class="btn float-end btn-danger" *ngIf="AtLeastTwoSelected()" [disabled]="!AtLeastTwoSelected()" data-bs-toggle="modal" data-bs-target="#MAHESHASIGN" >Assign</button>
 
@@ -131,10 +167,13 @@
                                             </div>
                                           </div>
                                           <div class="row ">
-                                            <span class="form-check form-check-inline " *ngIf="role == 'Superadmin'" style="margin-left:27px">
-                                              <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
-                                              <label class="form-check-label" for="selectAllCheckbox">Select All</label>
-                                            </span>
+                                           
+                                            <!-- <select class="form-select" aria-label="Default select example">
+                                              <option selected>Open this select menu</option>
+                                              <option value="1">One</option>
+                                              <option value="2">Two</option>
+                                              <option value="3">Three</option>
+                                            </select> -->
                                     
                                             <ng-container *ngIf="all_newChefVideos.length > 0; else noNewChefVideosFound">
                                               <div class="col-3" *ngFor="let video of (showMoreVideosnew ? all_newChefVideos : all_newChefVideos.slice(0, 4)); let i = index">
@@ -166,8 +205,18 @@
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" data-bs-toggle="modal" (click)="newChefVideosdelete(video.id)" data-bs-target="#denybutton">
                                                   <label class="form-check-label" for="inlineRadio2"><strong class="fs-5">Reject</strong></label>
                                                 </div>
+
+                                                
                                               </div>
                                             </ng-container>
+                                              <div class="">
+                                                <button class="card-title mb-1 float-end text-primary" (click)="toggleShowMorenew()">
+                                                  {{ showMoreVideosnew ? 'Less' : 'More' }}
+                                                </button>
+                                              </div>
+                                           
+
+
                                             <ng-template #noNewChefVideosFound>
                                               <div class="col">
                                                 <p>No new chef videos found.</p>
@@ -203,11 +252,7 @@
                                       <div class="col mx-3">
                                         <h4 class="card-title text-uppercase text-muted mb-3">Approved Videos</h4>
                                       </div>
-                                      <div class="col float-end text-primary">
-                                        <button class="card-title mb-3 float-end text-primary" (click)="toggleShowMore()">
-                                          {{ showMoreVideos ? 'Less' : 'More' }}
-                                        </button>
-                                      </div>
+                                      
                                     </div>
                         
                                     <div class="row">
@@ -228,6 +273,14 @@
                             
                                         </div>
                                       </ng-container>
+
+                                      <div class="">
+                                        <button class="card-title mb-1 float-end text-primary" (click)="toggleShowMore()">
+                                          {{ showMoreVideos ? 'Less' : 'More' }}
+                                        </button>
+                                      </div>
+
+
                                       <ng-template #noNotApprovedVideosFound>
                                         <div class="col">
                                           <p>No not-approved videos found.</p>
@@ -256,11 +309,7 @@
                                       <div class="col mx-3">
                                         <h4 class="card-title text-uppercase text-muted mb-3">Rejected Videos</h4>
                                       </div>
-                                      <div class="col float-end text-primary">
-                                        <button class="card-title mb-3 float-end text-primary" (click)="toggleShowMoreRejectedVideos()">
-                                          {{ showMoreRejectedVideos ? 'Less' : 'More' }}
-                                        </button>
-                                      </div>
+                                      
                                     </div>
                         
                                     <div class="row">
@@ -281,6 +330,13 @@
                              
                                         </div>
                                       </ng-container>
+
+                                      <div class="">
+                                        <button class="card-title mb-1 float-end text-primary" (click)="toggleShowMoreRejectedVideos()">
+                                          {{ showMoreRejectedVideos ? 'Less' : 'More' }}
+                                        </button>
+                                      </div>
+
                                       <ng-template #noVideosFound>
                                         <div class="col">
                                           <p>No videos found.</p>
